kustomize/overlay/production/admin-ui/sa-deployments.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: admin-ui

spec:
  replicas: 2
  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1 
      
  template:
    spec:

      serviceAccountName: forgerock-sa

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/forgerock
                    operator: Exists


        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: admin-ui
                topologyKey: kubernetes.io/hostname

      tolerations:
        - key: dedicated
          operator: Equal
          value: forgerock
          effect: NoSchedule


      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: admin-ui

      containers:
        - name: admin-ui

          resources:
            requests:
              cpu: 250m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
