kustomize/overlay/production/admin-ui/remove-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ui
